force-app/main/default/objects/Hire__c/Hire__c.object-meta.xml
<CustomObject>
    <label>Hire</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>ID#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>