force-app/main/default/objects/Hire__c/fields/CDR__c.field-meta.xml
<CustomField>
    <fullName>CDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDR #</label>
    <referenceTo>Camp_Daily_Report__c</referenceTo>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>