force-app/main/default/objects/Hire__c/fields/Hire_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Hire_Item_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hire Item ID #</label>
    <referenceTo>Services_Received__c</referenceTo>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>