force-app/main/default/objects/Hire__c/fields/Hire_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Hire_Item_Name__c</fullName>
    <label>Hire Item Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>