force-app/main/default/objects/Hire__c/fields/RDR__c.field-meta.xml
<CustomField>
    <fullName>RDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RDR#</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>