force-app/main/default/objects/Hire__c/recordTypes/General_Charges.recordType-meta.xml
<RecordType>
    <fullName>General_Charges</fullName>
    <active>true</active>
    <label>General Charges</label>
</RecordType>