force-app/main/default/objects/Hire__c/recordTypes/Hire_Item_Camp_Daily.recordType-meta.xml
<RecordType>
    <fullName>Hire_Item_Camp_Daily</fullName>
    <active>true</active>
    <label>Hire Item - Camp Daily</label>
</RecordType>