force-app/main/default/objects/Hire__c/recordTypes/Hire_Items_Rig_Daily.recordType-meta.xml
<RecordType>
    <fullName>Hire_Items_Rig_Daily</fullName>
    <active>true</active>
    <label>Hire Items - Rig Daily</label>
</RecordType>